Fixed PWA Layout issues

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -9,3 +9,7 @@ ion-badge {
     display: flex;
     align-items: center;
 }
+ion-icon[name='basket'] {
+    width: 25px;
+height: 25px;
+}
