--- a/src/app/components/restaurant-card/restaurant-card.component.scss
+++ b/src/app/components/restaurant-card/restaurant-card.component.scss
@@ -1,16 +1,16 @@
 .imageShow {
   position: relative;
   top: 0%;
-  height: 14vh;
-  width: 14vh;
+  height: 120px;
+  width: 120px;
 }
 ion-card {
   margin: 0px;
 }
 ion-card-header {
   padding: 2vw 0vw;
-  min-height: 160px;
-  max-height: 160px;
+  min-height: 180px;
+  max-height: 180px;
 }
 
 .overlay {
@@ -52,4 +52,8 @@ h2 {
 
 .cl-grey {
   color: grey;
+}
+
+h4 {
+  margin: 0px;
 }
